--- a/src/contacts.html
+++ b/src/contacts.html
@@ -77,13 +77,13 @@
                                 <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                                 <div class="employers__social">
                                     <a href="#">
-                                        <img src="assets/images/social/facebook-employers.png" alt="">
+                                        <img src="assets/images/social/facebook-employers.png" data-hover-src="assets/images/social/facebook-employers-hover.png" alt="">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/social/vk-employers.png" alt="">
+                                        <img src="assets/images/social/vk-employers.png" data-hover-src="assets/images/social/vk-employers-hover.png" alt="">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/social/instagram-employers.png" alt="">
+                                        <img src="assets/images/social/instagram-employers.png" data-hover-src="assets/images/social/instagram-employers-hover.png" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -107,13 +107,13 @@
                                 <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                                 <div class="employers__social">
                                     <a href="#">
-                                        <img src="assets/images/social/facebook-employers.png" alt="">
+                                        <img src="assets/images/social/facebook-employers.png" data-hover-src="assets/images/social/facebook-employers-hover.png" alt="">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/social/vk-employers.png" alt="">
+                                        <img src="assets/images/social/vk-employers.png" data-hover-src="assets/images/social/vk-employers-hover.png" alt="">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/social/instagram-employers.png" alt="">
+                                        <img src="assets/images/social/instagram-employers.png" data-hover-src="assets/images/social/instagram-employers-hover.png" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -139,13 +139,13 @@
                                 <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                                 <div class="employers__social">
                                     <a href="#">
-                                        <img src="assets/images/social/facebook-employers.png" alt="">
+                                        <img src="assets/images/social/facebook-employers.png" data-hover-src="assets/images/social/facebook-employers-hover.png" alt="">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/social/vk-employers.png" alt="">
+                                        <img src="assets/images/social/vk-employers.png" data-hover-src="assets/images/social/vk-employers-hover.png" alt="">
                                     </a>
                                     <a href="#">
-                                        <img src="assets/images/social/instagram-employers.png" alt="">
+                                        <img src="assets/images/social/instagram-employers.png" data-hover-src="assets/images/social/instagram-employers-hover.png" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -168,15 +168,6 @@
                                 <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
                                 <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                                 <div class="employers__social">
-                                    <a href="#">
-                                        <img src="assets/images/social/facebook-employers.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/social/vk-employers.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/social/instagram-employers.png" alt="">
-                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -200,15 +191,6 @@
                                 <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
                                 <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                                 <div class="employers__social">
-                                    <a href="#">
-                                        <img src="assets/images/social/facebook-employers.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/social/vk-employers.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/social/instagram-employers.png" alt="">
-                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -230,15 +212,6 @@
                                 <a href="tel:+375290000000" class="employers__link">+375 29 000 00 00</a>
                                 <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                                 <div class="employers__social">
-                                    <a href="#">
-                                        <img src="assets/images/social/facebook-employers.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/social/vk-employers.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/social/instagram-employers.png" alt="">
-                                    </a>
                                 </div>
                             </div>
                         </div>
