--- a/src/guide.html
+++ b/src/guide.html
@@ -16,7 +16,7 @@
     <div class="page-content">
 
         <div class="guide container">
-            <div class="giude-inner">
+            <div class="guide-inner">
                 <!---->
                 <div class="guide-item">
                     <img src="assets/images/remove/guide_1.jpg" alt="">
@@ -148,6 +148,8 @@
                     </div>
                 </div>
             </div>
+
+            //= templates/pagination.html
         </div>
 
     </div><!-- page-content -->
