--- a/src/index-page.html
+++ b/src/index-page.html
@@ -149,7 +149,15 @@
                         <div class="selling-catalog__img">
                             <img src="assets/images/remove/selling-img.jpg" alt="">
                             <div class="selling-catalog__img-overlay">
-                                Текст Текст Текст Текст Текст Текст
+                                <ul>
+                                    <li><span>Тип:</span> Моская парусная яхта</li>
+                                    <li><span>Общая длина:</span> 17.78 м.</li>
+                                    <li><span>Длина корпуса:</span> 4.97 м.</li>
+                                    <li><span>Ширина корпуса:</span> 4.97 м.</li>
+                                </ul>
+                                <a href="#" class="more-btn-dark" tabindex="0">
+                                    Подробнее
+                                </a>
                             </div>
                         </div>
                     </a>
@@ -165,7 +173,15 @@
                         <div class="selling-catalog__img">
                             <img src="assets/images/remove/selling-img.jpg" alt="">
                             <div class="selling-catalog__img-overlay">
-                                Текст Текст Текст Текст Текст Текст
+                                <ul>
+                                    <li><span>Тип:</span> Моская парусная яхта</li>
+                                    <li><span>Общая длина:</span> 17.78 м.</li>
+                                    <li><span>Длина корпуса:</span> 4.97 м.</li>
+                                    <li><span>Ширина корпуса:</span> 4.97 м.</li>
+                                </ul>
+                                <a href="#" class="more-btn-dark" tabindex="0">
+                                    Подробнее
+                                </a>
                             </div>
                         </div>
                     </a>
@@ -181,7 +197,15 @@
                         <div class="selling-catalog__img">
                             <img src="assets/images/remove/selling-img.jpg" alt="">
                             <div class="selling-catalog__img-overlay">
-                                Текст Текст Текст Текст Текст Текст
+                                <ul>
+                                    <li><span>Тип:</span> Моская парусная яхта</li>
+                                    <li><span>Общая длина:</span> 17.78 м.</li>
+                                    <li><span>Длина корпуса:</span> 4.97 м.</li>
+                                    <li><span>Ширина корпуса:</span> 4.97 м.</li>
+                                </ul>
+                                <a href="#" class="more-btn-dark" tabindex="0">
+                                    Подробнее
+                                </a>
                             </div>
                         </div>
                     </a>
@@ -197,7 +221,15 @@
                         <div class="selling-catalog__img">
                             <img src="assets/images/remove/selling-img.jpg" alt="">
                             <div class="selling-catalog__img-overlay">
-                                Текст Текст Текст Текст Текст Текст
+                                <ul>
+                                    <li><span>Тип:</span> Моская парусная яхта</li>
+                                    <li><span>Общая длина:</span> 17.78 м.</li>
+                                    <li><span>Длина корпуса:</span> 4.97 м.</li>
+                                    <li><span>Ширина корпуса:</span> 4.97 м.</li>
+                                </ul>
+                                <a href="#" class="more-btn-dark" tabindex="0">
+                                    Подробнее
+                                </a>
                             </div>
                         </div>
                     </a>
@@ -213,7 +245,15 @@
                         <div class="selling-catalog__img">
                             <img src="assets/images/remove/selling-img.jpg" alt="">
                             <div class="selling-catalog__img-overlay">
-                                Текст Текст Текст Текст Текст Текст
+                                <ul>
+                                    <li><span>Тип:</span> Моская парусная яхта</li>
+                                    <li><span>Общая длина:</span> 17.78 м.</li>
+                                    <li><span>Длина корпуса:</span> 4.97 м.</li>
+                                    <li><span>Ширина корпуса:</span> 4.97 м.</li>
+                                </ul>
+                                <a href="#" class="more-btn-dark" tabindex="0">
+                                    Подробнее
+                                </a>
                             </div>
                         </div>
                     </a>
@@ -229,7 +269,15 @@
                         <div class="selling-catalog__img">
                             <img src="assets/images/remove/selling-img.jpg" alt="">
                             <div class="selling-catalog__img-overlay">
-                                Текст Текст Текст Текст Текст Текст
+                                <ul>
+                                    <li><span>Тип:</span> Моская парусная яхта</li>
+                                    <li><span>Общая длина:</span> 17.78 м.</li>
+                                    <li><span>Длина корпуса:</span> 4.97 м.</li>
+                                    <li><span>Ширина корпуса:</span> 4.97 м.</li>
+                                </ul>
+                                <a href="#" class="more-btn-dark" tabindex="0">
+                                    Подробнее
+                                </a>
                             </div>
                         </div>
                     </a>
