--- a/src/learn.html
+++ b/src/learn.html
@@ -293,13 +293,13 @@
                             <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                             <div class="employers__social">
                                 <a href="#">
-                                    <img src="assets/images/social/facebook-employers.png" alt="">
+                                    <img src="assets/images/social/facebook-employers.png" data-hover-src="assets/images/social/facebook-employers-hover.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/images/social/vk-employers.png" alt="">
+                                    <img src="assets/images/social/vk-employers.png" data-hover-src="assets/images/social/vk-employers-hover.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/images/social/instagram-employers.png" alt="">
+                                    <img src="assets/images/social/instagram-employers.png" data-hover-src="assets/images/social/instagram-employers-hover.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -323,13 +323,13 @@
                             <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                             <div class="employers__social">
                                 <a href="#">
-                                    <img src="assets/images/social/facebook-employers.png" alt="">
+                                    <img src="assets/images/social/facebook-employers.png" data-hover-src="assets/images/social/facebook-employers-hover.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/images/social/vk-employers.png" alt="">
+                                    <img src="assets/images/social/vk-employers.png" data-hover-src="assets/images/social/vk-employers-hover.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/images/social/instagram-employers.png" alt="">
+                                    <img src="assets/images/social/instagram-employers.png" data-hover-src="assets/images/social/instagram-employers-hover.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -355,13 +355,13 @@
                             <a href="mailto:youname@site.by" class="employers__link-mail">youname@site.by</a>
                             <div class="employers__social">
                                 <a href="#">
-                                    <img src="assets/images/social/facebook-employers.png" alt="">
+                                    <img src="assets/images/social/facebook-employers.png" data-hover-src="assets/images/social/facebook-employers-hover.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/images/social/vk-employers.png" alt="">
+                                    <img src="assets/images/social/vk-employers.png" data-hover-src="assets/images/social/vk-employers-hover.png" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/images/social/instagram-employers.png" alt="">
+                                    <img src="assets/images/social/instagram-employers.png" data-hover-src="assets/images/social/instagram-employers-hover.png" alt="">
                                 </a>
                             </div>
                         </div>
