--- a/src/events.html
+++ b/src/events.html
@@ -161,6 +161,8 @@
                     </a>
                 </div>
             </div>
+
+            //= templates/pagination.html
         </div>
 
     </div><!-- page-content -->
